Add _LearnHTMLbyBuildingaCatPhotoApp page

--- a/FreeCodeCampApp/Views/Shared/_Layout.cshtml
+++ b/FreeCodeCampApp/Views/Shared/_Layout.cshtml
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FreeCodeCampApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FreeCodeCampApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
 <body>
     <header id="home">
@@ -17,7 +18,7 @@
                     <a asp-controller="Home" asp-action="Index"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
                     <a href="#welcome-section"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
                     <a href="#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
-                    <a href="#projects"><i class="fa fa-fw fa-code"></i><span>Projects</span></a>
+                    <a asp-controller="Projects" asp-action="Index"><i class="fa fa-fw fa-code"></i><span>Projects</span></a>
                     <a href="#contact"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a>
                 </div>
             </navbar>
