--- a/FreeCodeCampApp/Views/Shared/_Layout.cshtml
+++ b/FreeCodeCampApp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <a asp-controller="Home" asp-action="Index"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
                     <a href="#welcome-section"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
                     <a href="#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
-                    <a asp-controller="Projects" asp-action="Index"><i class="fa fa-fw fa-code"></i><span>Projects</span></a>
+                    <a asp-controller="ResponsiveWebDesign" asp-action="Index"><i class="fa fa-fw fa-code"></i><span>Projects</span></a>
                     <a href="#contact"><i class="fa fa-fw fa-envelope"></i><span>Contact</span></a>
                 </div>
             </navbar>
@@ -31,11 +31,6 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container text-center">
-            <p>All Rights Reserved. &copy; 2024 <a href="https://amaraltech.app/" target="_blank">AmaralTech</a></p>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
