--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/_CafeMenu.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/_CafeMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <h5 class="modal-title" id="projectModalLabel">Learn Basic CSS by Building a Cafe Menu</h5>
+    <h5 class="modal-title" id="projectCafeMenu">Learn Basic CSS by Building a Cafe Menu</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body custom-cafe">
