--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/_SetOfColoredMarkers.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/_SetOfColoredMarkers.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <h5 class="modal-title" id="projectModalLabel">Learn CSS Colors by Building a Set of Colored Markers</h5>
+    <h5 class="modal-title" id="projectSetColor">Learn CSS Colors by Building a Set of Colored Markers</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body custom-color">
