--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -23,7 +23,7 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(6)">Learn the CSS Box Model by Building a Rothko Painting</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(7)">Learn CSS Flexbox by Building a Photo Gallery</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(8)">Learn Typography by Building a Nutrition Label</button>
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(9)">Learn Accessibility by Building a Quiz</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(9)">Learn Accessibility by Building a Quiz</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-tribute-page-template/" target="_blank">
                         Certification Project: Tribute Page
                     </a>
