Add _BalanceSheet page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -29,8 +29,8 @@
                     </a>
 
 
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(11)">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(12)">Learn Intermediate CSS by Building a Cat Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(11)">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
+                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(12)">Learn Intermediate CSS by Building a Cat Painting</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(13)">Learn Responsive Web Design by Building a Piano</button> *@
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-technical-documentation-page-template/" target="_blank">
                         Certification Project: Technical Documentation Page
@@ -44,8 +44,8 @@
                     </a>
 
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(18)">Learn CSS Animation by Building a Ferris Wheel</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button> *@
+                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
                 </div>
             </div>
         </div>
