--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -30,8 +30,8 @@
 
 
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(11)">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(12)">Learn Intermediate CSS by Building a Cat Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(13)">Learn Responsive Web Design by Building a Piano</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(12)">Learn Intermediate CSS by Building a Cat Painting</button>
+                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(13)">Learn Responsive Web Design by Building a Piano</button> *@
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-technical-documentation-page-template/" target="_blank">
                         Certification Project: Technical Documentation Page
                     </a>
