--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using FreeCodeCampApp.Models.Enums
+@{
     ViewData["Title"] = "Projects";
 }
 
@@ -14,31 +15,31 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(1)">Learn HTML by Building a Cat Photo App</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(2)">Learn Basic CSS by Building a Cafe Menu</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(3)">Learn CSS Colors by Building a Set of Colored Markers</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(4)">Learn HTML Forms by Building a Registration Form</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CatPhotoApp))">Learn HTML by Building a Cat Photo App</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CafeMenu))">Learn Basic CSS by Building a Cafe Menu</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.SetOfColoredMarkers)">Learn CSS Colors by Building a Set of Colored Markers</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.RegistrationForm))">Learn HTML Forms by Building a Registration Form</button>
                     <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject(5)">Certification Project: Survey Form</button>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(6)">Learn the CSS Box Model by Building a Rothko Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(7)">Learn CSS Flexbox by Building a Photo Gallery</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(8)">Learn Typography by Building a Nutrition Label</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(9)">Learn Accessibility by Building a Quiz</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.RothkoPainting))">Learn the CSS Box Model by Building a Rothko Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.PhotoGallery))">Learn CSS Flexbox by Building a Photo Gallery</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.NutritionLabel))">Learn Typography by Building a Nutrition Label</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Quiz))">Learn Accessibility by Building a Quiz</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-tribute-page-template/" target="_blank">
                         Certification Project: Tribute Page
                     </a>
 
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(11)">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(12)">Learn Intermediate CSS by Building a Cat Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(13)">Learn Responsive Web Design by Building a Piano</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.BalanceSheet))">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CatPainting))">Learn Intermediate CSS by Building a Cat Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Piano)">Learn Responsive Web Design by Building a Piano</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-technical-documentation-page-template/" target="_blank">
                         Certification Project: Technical Documentation Page
                     </a>
 
 
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(15)">Learn CSS Variables by Building a City Skyline</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(16)">Learn CSS Grid by Building a Magazine</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
+                    @*<button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(16)">Learn CSS Grid by Building a Magazine</button> *@
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-product-landing-page-template/" target="_blank">
                         Certification Project: Product Landing Page
                     </a>
@@ -63,15 +64,13 @@
 }
 
 <script>
-    function OpenProject(id) {
+    function OpenProject(project) {
         $.ajax({
             type: "GET",
-            url: '/ResponsiveWebDesign/OpenProject?id=' + id,
+            url: '/ResponsiveWebDesign/OpenProject?projects=' + project,
             success: function (data) {
-                $modal = $("#projectModal");
-
+                let $modal = $("#projectModal");
                 $modal.find('.modal-content').html(data);
-
                 $modal.modal("show");
             },
             error: function (data) {
