Add _Magazine page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -39,13 +39,13 @@
 
 
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
-                    @*<button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(16)">Learn CSS Grid by Building a Magazine</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Magazine))">Learn CSS Grid by Building a Magazine</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-product-landing-page-template/" target="_blank">
                         Certification Project: Product Landing Page
                     </a>
 
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(18)">Learn CSS Animation by Building a Ferris Wheel</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(18)">Learn CSS Animation by Building a Ferris Wheel</button>
+                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button> *@
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
                 </div>
             </div>
