--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -44,7 +44,7 @@
                         Certification Project: Product Landing Page
                     </a>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(18)">Learn CSS Animation by Building a Ferris Wheel</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button> *@
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
                 </div>
