--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -45,7 +45,7 @@
                     </a>
 
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
-                    @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(19)">Learn CSS Transforms by Building a Penguin</button> *@
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Penguin))">Learn CSS Transforms by Building a Penguin</button>
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
                 </div>
             </div>
