--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -15,38 +15,51 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CatPhotoApp))">Learn HTML by Building a Cat Photo App</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CafeMenu))">Learn Basic CSS by Building a Cafe Menu</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.SetOfColoredMarkers)">Learn CSS Colors by Building a Set of Colored Markers</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.RegistrationForm))">Learn HTML Forms by Building a Registration Form</button>
-                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject(5)">Certification Project: Survey Form</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CatPhotoApp))">Learn HTML by Building a Cat Photo App</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CafeMenu))">Learn Basic CSS by Building a Cafe Menu</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.SetOfColoredMarkers))">Learn CSS Colors by Building a Set of Colored Markers</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.RegistrationForm))">Learn HTML Forms by Building a Registration Form</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.SurveyForm)">Certification Project: Survey Form</button>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.RothkoPainting))">Learn the CSS Box Model by Building a Rothko Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.PhotoGallery))">Learn CSS Flexbox by Building a Photo Gallery</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.NutritionLabel))">Learn Typography by Building a Nutrition Label</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Quiz))">Learn Accessibility by Building a Quiz</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.RothkoPainting))">Learn the CSS Box Model by Building a Rothko Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.PhotoGallery))">Learn CSS Flexbox by Building a Photo Gallery</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.NutritionLabel))">Learn Typography by Building a Nutrition Label</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Quiz))">Learn Accessibility by Building a Quiz</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-tribute-page-template/" target="_blank">
                         Certification Project: Tribute Page
                     </a>
 
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.BalanceSheet))">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CatPainting))">Learn Intermediate CSS by Building a Cat Painting</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Piano)">Learn Responsive Web Design by Building a Piano</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.BalanceSheet))">Learn More About CSS Pseudo Selectors by Building A Balance Sheet</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CatPainting))">Learn Intermediate CSS by Building a Cat Painting</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Piano))">Learn Responsive Web Design by Building a Piano</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-technical-documentation-page-template/" target="_blank">
                         Certification Project: Technical Documentation Page
                     </a>
 
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Magazine))">Learn CSS Grid by Building a Magazine</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.CitySkyline))">Learn CSS Variables by Building a City Skyline</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Magazine))">Learn CSS Grid by Building a Magazine</button>
                     <a type="button" class="list-group-item list-group-item-action list-group-item-info" href="https://amaral-tec.github.io/responsive-product-landing-page-template/" target="_blank">
                         Certification Project: Product Landing Page
                     </a>
 
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(@((int)Projects.Penguin))">Learn CSS Transforms by Building a Penguin</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.FerrisWheel))">Learn CSS Animation by Building a Ferris Wheel</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectResponsiveWebDesign(@((int)Projects.Penguin))">Learn CSS Transforms by Building a Penguin</button>
                     @* <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject(20)">Certification Project: Personal Portfolio Webpage</button> *@
+                </div>
+            </div>
+        </div>
+        
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    JavaScript Algorithms and Data Structures
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
                 </div>
             </div>
         </div>
@@ -64,10 +77,26 @@
 }
 
 <script>
-    function OpenProject(project) {
+    function OpenProjectResponsiveWebDesign(project) {
+        console.log(project);
         $.ajax({
             type: "GET",
             url: '/ResponsiveWebDesign/OpenProject?projects=' + project,
+            success: function (data) {
+                let $modal = $("#projectModal");
+                $modal.find('.modal-content').html(data);
+                $modal.modal("show");
+            },
+            error: function (data) {
+                alert(data.responseJSON.mensagem);
+            }
+        });
+    }
+
+    function OpenProjectJavaScriptAlgorithms(project) {
+        $.ajax({
+            type: "GET",
+            url: '/JavaScriptAlgorithmsDataStructures/OpenProject?projects=' + project,
             success: function (data) {
                 let $modal = $("#projectModal");
                 $modal.find('.modal-content').html(data);
