--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_PyramidGenerator.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_PyramidGenerator.cshtml
@@ -1,7 +1,32 @@
 ﻿<div class="modal-header">
-    <h5 class="modal-title" id="projectPenguin">Learn CSS Transforms by Building a Penguin</h5>
+    <h5 class="modal-title" id="projectPyramidGenerator">Learn Introductory JavaScript by Building a Pyramid Generator</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
-<div class="modal-body custom-penguin">
+<div class="modal-body custom-pyramid-generator">
+    <div id="pyramid-output"></div>
 
 </div>
+
+<script>
+    const character = "!";
+    const count = 10;
+    const rows = [];
+    let inverted = false;
+
+    function padRow(rowNumber, rowCount) {
+        return " ".repeat(rowCount - rowNumber) + character.repeat(2 * rowNumber - 1) + " ".repeat(rowCount - rowNumber);
+    }
+
+    for (let i = 1; i <= count; i++) {
+        if (inverted) {
+            rows.unshift(padRow(i, count));
+        } else {
+            rows.push(padRow(i, count));
+        }
+    }
+
+    let result = rows.join("\n");
+
+    document.getElementById("pyramid-output").innerText = result;
+</script>
+
