--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -60,6 +60,7 @@
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
                 </div>
             </div>
         </div>
