Add _RolePlayingGame page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -61,6 +61,7 @@
                 <div class="accordion-body">
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RolePlayingGame))">Learn Basic JavaScript by Building a Role Playing Game</button>
                 </div>
             </div>
         </div>
