--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -62,6 +62,7 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PyramidGenerator))">Learn Introductory JavaScript by Building a Pyramid Generator</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RolePlayingGame))">Learn Basic JavaScript by Building a Role Playing Game</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RandomBackgroundColorChanger))">Learn Basic Debugging by Building a Random Background Color Changer</button>
                 </div>
             </div>
         </div>
