Add _CalorieCounter page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -63,6 +63,7 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.GradebookApp))">Review JavaScript Fundamentals by Building a Gradebook App</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RolePlayingGame))">Learn Basic JavaScript by Building a Role Playing Game</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RandomBackgroundColorChanger))">Learn Basic Debugging by Building a Random Background Color Changer</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.CalorieCounter))">Learn Form Validation by Building a Calorie Counter</button>
                 </div>
             </div>
         </div>
