--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -65,6 +65,7 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RandomBackgroundColorChanger))">Learn Basic Debugging by Building a Random Background Color Changer</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.CalorieCounter))">Learn Form Validation by Building a Calorie Counter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RockPaperScissorsGame))">Review DOM Manipulation by Building a Rock, Paper, Scissors Game</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.MusicPlayer))">Learn Basic String and Array Methods by Building a Music Player</button>
                 </div>
             </div>
         </div>
