Add _DateFormatter page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -66,7 +66,9 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.CalorieCounter))">Learn Form Validation by Building a Calorie Counter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.RockPaperScissorsGame))">Review DOM Manipulation by Building a Rock, Paper, Scissors Game</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.MusicPlayer))">Learn Basic String and Array Methods by Building a Music Player</button>
-                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PalindromeChecker))">Build a Palindrome Checker Project</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.PalindromeChecker))">Certification Project: Build a Palindrome Checker</button>
+                    
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProjectJavaScriptAlgorithms(@((int)Projects.DateFormatter))">Learn the Date Object by Building a Date Formatter</button>
                 </div>
             </div>
         </div>
